--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+  background-color: #282c34;
   color: white;
+  font-size: calc(10px + 2vmin);
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.dropZone {
+  border: 1px solid #151515;
+  width: 400px;
+  height: 200px;
+  padding: 20px;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropZone:hover {
+  background-color: #151515;
+  cursor: pointer;
+}
+
+.delete {
+  text-align: center;
+  position: absolute;
+  top: -15px;
+  right: -10px;
+  font-size: 18px;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.delete:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
 }
